@@ -1,0 +1,15 @@
+User-agent: *
+
+# Uncomment the following line ONLY if sitemaps.org or HTML sitemaps are used
+# and you have verified that your site is being indexed correctly.
+# Disallow: /browse
+
+# You also may wish to disallow access to the following paths, in order
+# to stop web spiders from accessing user-based content:
+# Disallow: /advanced-search
+# Disallow: /contact
+# Disallow: /feedback
+# Disallow: /forgot
+# Disallow: /login
+# Disallow: /register
+# Disallow: /search
