@@ -71,6 +71,7 @@
  - Fix for Jira [DS-87] XMLUI file download links break in Google search results if file 'sequence' number changes.
  - Fix for Jira [DS-95] XMLUI: Visiting an item page with a trailing slash returns a 404 message
  - Fix for Jira [DS-96] XMLUI Wing-Framework 'Radio' class doesn't support adding radio buttons which are unselected by default.
+ - Fix for Jira [DS-97] XMLUI does not come with a robots.txt out-of-the-box. It also does not provide suggestions for loading global static content.
 
 (Kim Shepherd)
  - [2385187] Fix for toDate method in DCDate
